fixes graph overflow problem

--- a/code/app/styles.css
+++ b/code/app/styles.css
@@ -74,3 +74,7 @@ a{
   padding: 8px;
 }
 
+/* Hide any overflowing content */
+.custom-visNetwork-container {
+    overflow: hidden;  
+}
